# dwm

./: .gitignore  CMakeLists.txt  README.md  build.sh  build.zig  install.sh  setup.sh
.cache/clangd/index/: config.h.63B22AC06F188C3D.idx  drw.c.0748E8D0AB0BF5A3.idx  drw.h.0EB74FE4D1606B11.idx  dwm.c.CC208427063C26F6.idx  transient.c.967EE41C65D9F989.idx  util.c.18E2A937B8AB1565.idx  util.h.1274C86A9634E0B8.idx
dwm_skates/include/dwm_skates/: appearance.h  commands.h  config.h  def.h  monitor.h  sk_def.h  wm_func_def.h
dwm_skates/include/dwm_skates/impl/: config.c  wm_def.c
dwm_skates/include/dwm_skates/source/: config.c  globals.c  wm_client.c  wm_def.c  wm_event.c  wm_input.c  wm_monitor.c  wm_stack.c  wm_tile.c
dwm_skates/src/: drw.c  dwm.c  transient.c  util.c  wm_func_impl.c
headers/: appearance.h  colors.h  commands.h  config.h  def.h  drw.h  keymaps.h  layouts.h  macros.h  rules.h  sk_def.h  util.h  wm_client.h  wm_func_def.h
headers/sk/: sk.h  sk_def.h
headers/sk/lua/: lapi.h  lauxlib.h  lfunc.h  llex.h  lmem.h  lobject.h  ltable.h  ltm.h  lualib.h  lundump.h  lvm.h  lzio.h
lua_scripts/: config.lua  rc.lua
scripts/: rc.lua
shell_scripts/: autostart.sh  statusbar.sh
sk/include/sk/lua/: lcode.h  lctype.h  ldebug.h  ldo.h  lgc.h  llimits.h  lopcodes.h  lparser.h  lstate.h  lstring.h  lua.h
sk/include/sk/opengl/: glext.h  opengl.h
sk/include/sk/opengl/glad/: glad32.h  glad41.h
sk/src/lua/: lapi.c  lcode.c  ldebug.c  ldo.c  lfunc.c  liolib.c  loadlib.c  lobject.c  lopcodes.c  lparser.c  lstring.c  ltable.c  ltablib.c  lua.c  luac.c  lutf8lib.c  lzio.c
source/: config.c  drw.c  dwm.c  globals.c  main.c  transient.c  util.c  wm_client.c  wm_def.c  wm_event.c  wm_func_impl.c  wm_input.c  wm_lua_func_impl.c  wm_monitor.c  wm_stack.c  wm_tile.c
source/lua/: lauxlib.c  lbaselib.c  lcorolib.c  lctype.c  ldblib.c  ldump.c  lgc.c  linit.c  llex.c  lmathlib.c  lmem.c  loslib.c  lstate.c  lstrlib.c  ltm.c  lundump.c  lvm.c
